# ketama

libketama/: Makefile  Makefile.am  Makefile.in  README  add_rm_test.c  bootstrap  config.h.in  configure  configure.ac  ketama.c  ketama.h  php_test.c
patches/: ketama_fnv_patch.txt
php_ketama/: config.m4  ketama.c  php_ketama.h
python_ketama/: ketamamodule.c  ketamamodule.h  setup.py  tests.py
